# SeedVR2ImgUpscale

./: .gitignore  README.md  pyproject.toml
seedvr2/: __init__.py  api.py
src/core/: generation_phases.py  generation_utils.py  model_configuration.py  model_loader.py
src/models/dit_3b/: normalization.py
src/models/dit_7b/: attention.py
src/optimization/: blockswap.py  compatibility.py  memory_manager.py  performance.py
src/utils/: color_fix.py  constants.py  debug.py  model_registry.py
