[project]
name = "seedvr2"
description = "SeedVR2 diffusion-based video/image upscaler - standalone package"
version = "2.5.24"
authors = [
    {name = "numz"},
    {name = "adrientoupet"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
     "Operating System :: OS Independent"
]
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "safetensors",
    "numpy",
    "tqdm",
    "psutil",
    "einops>=0.6.0",
    "omegaconf>=2.3.0",
    "diffusers>=0.33.1",
    "peft>=0.17.0",
    "rotary_embedding_torch>=0.5.3",
    "opencv-python",
    "gguf",
    "matplotlib"
]

[project.urls]
Repository = "https://github.com/mattmarkwick/SeedVR2ImgUpscale"
"Bug Tracker" = "https://github.com/mattmarkwick/SeedVR2ImgUpscale/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["seedvr2*", "src*", "configs*"]
